[gd_scene load_steps=15 format=3 uid="uid://boxtpa35t5prb"]

[ext_resource type="Script" path="res://components/gui/bar.gd" id="1_ainj5"]
[ext_resource type="PackedScene" uid="uid://b7jhew0jt4r0o" path="res://components/gui/map.tscn" id="2_hcdlv"]
[ext_resource type="PackedScene" uid="uid://50wimtrbvb48" path="res://components/gui/settings.tscn" id="2_moqyr"]
[ext_resource type="Texture2D" uid="uid://bmn415owsued0" path="res://components/gui/art/pause.png" id="3_6uhmj"]
[ext_resource type="Texture2D" uid="uid://bw0mcdey1y4fh" path="res://components/gui/art/mapbutton.png" id="4_t7fyo"]
[ext_resource type="Texture2D" uid="uid://fepk7o73rct6" path="res://components/gui/art/help.png" id="5_5e7ep"]
[ext_resource type="Texture2D" uid="uid://ct5jjw15ry1ar" path="res://components/gui/art/settings.png" id="6_gh31b"]
[ext_resource type="Texture2D" uid="uid://cagl74h2jt37p" path="res://components/gui/art/pawsed.png" id="8_hkk7y"]
[ext_resource type="Texture2D" uid="uid://dcshwt1ei7nk1" path="res://scenes/misc/main menu/button.png" id="9_5b0bl"]
[ext_resource type="Texture2D" uid="uid://ms5w8g676h60" path="res://scenes/misc/main menu/pawbutton.png" id="10_ef5dt"]
[ext_resource type="FontFile" uid="uid://q5gmup0o3pe3" path="res://font/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="11_e0t3c"]
[ext_resource type="Texture2D" uid="uid://b3uw4gxidrpbu" path="res://components/gui/art/paneltexture.png" id="13_2ukx7"]
[ext_resource type="Theme" uid="uid://dmachh0rpm4r3" path="res://components/gui/text.theme" id="14_jxhbh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7kwr"]
bg_color = Color(0.654483, 0.460339, 0.158052, 1)

[node name="Bar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ainj5")

[node name="Settings" parent="." instance=ExtResource("2_moqyr")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="Map" parent="." instance=ExtResource("2_hcdlv")]
visible = false
layout_mode = 1

[node name="Instructions" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Instructions"]
layout_mode = 2
offset_left = 318.0
offset_top = 91.0
offset_right = 854.0
offset_bottom = 577.0
texture = ExtResource("13_2ukx7")

[node name="MarginContainer" type="MarginContainer" parent="Instructions/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -243.0
offset_right = 268.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Instructions/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("14_jxhbh")
text = "DIRECTIONS"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Instructions/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("14_jxhbh")
theme_override_font_sizes/font_size = 20
text = "A and D  or left and right - Move left and right
Q  - Pick up/drop/give to cat
E - Interact with cat or item
Space/enter - Progress dialogue

Click on entrances and arrows to enter.

This is an incomplete game, there is no ending currently.

(Press the question mark to exit this menu)

"
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 74.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a7kwr")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10

[node name="Pause" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("3_6uhmj")

[node name="Map" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("4_t7fyo")

[node name="Help" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("5_5e7ep")

[node name="Settings" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("6_gh31b")

[node name="Paused" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 330.25
offset_right = 616.0
offset_bottom = 370.25

[node name="PausedBg" type="Sprite2D" parent="Paused"]
position = Vector2(0, -1.24999)
scale = Vector2(6.92771, 6.64647)
texture = ExtResource("8_hkk7y")

[node name="UnpauseButton" type="TextureButton" parent="Paused/PausedBg"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.3113
offset_top = 12.9508
offset_right = 65.6887
offset_bottom = 61.9508
grow_horizontal = 2
scale = Vector2(0.206155, 0.192976)
texture_normal = ExtResource("9_5b0bl")
texture_pressed = ExtResource("10_ef5dt")
texture_hover = ExtResource("10_ef5dt")

[node name="Label" type="Label" parent="Paused/PausedBg/UnpauseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -11.5
offset_right = 34.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_e0t3c")
theme_override_font_sizes/font_size = 24
text = "UNPAWSE"

[node name="QuitButton" type="TextureButton" parent="Paused/PausedBg"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.167
offset_top = 25.6373
offset_right = 65.833
offset_bottom = 74.6373
grow_horizontal = 2
scale = Vector2(0.206155, 0.192976)
texture_normal = ExtResource("9_5b0bl")
texture_pressed = ExtResource("10_ef5dt")
texture_hover = ExtResource("10_ef5dt")

[node name="Label" type="Label" parent="Paused/PausedBg/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_e0t3c")
theme_override_font_sizes/font_size = 25
text = "QUIT"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Paused/PausedBg/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="Paused/PausedBg/QuitButton" to="." method="_on_quit_button_pressed"]
